--- a/votacoes/templates/votacoes/jogo.html
+++ b/votacoes/templates/votacoes/jogo.html
@@ -1,13 +1,7 @@
 {% extends 'votacoes/base.html' %}
 
 {% block content %}
-	<header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
-	<div class="mdl-layout__header-row">
-	<span class="mdl-layout-title">Jogos</span>
-	<div class="mdl-layout-spacer"></div>
-	<div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-    </header>
-    <div clas = "mlds-grid">
+	<h1>Jogos</h1>
 
     	<div >
     		<table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable">
