--- a/forum/templates/forum/contato.html
+++ b/forum/templates/forum/contato.html
@@ -1,14 +1,14 @@
 {% extends 'votacoes/base.html' %}
+
 {% load crispy_forms_tags %}
 
-{% block content %}
-  <div>
-  	<form method="POST" class="post-form">
-        <h1>Novo Comentário</h1>
-        {% csrf_token %}
-        {{ form|crispy }}
+{% block conteudo %}
+	<div >
+    <form method="POST" class="post-form">
+    	{% csrf_token %}
+        {{form|crispy}}
         <button type="submit" class="save btn btn-info">Save</button>
     </form>
-  </div>
+  	</div>
     
 {% endblock %}
