--- a/forum/templates/forum/new_post.html
+++ b/forum/templates/forum/new_post.html
@@ -1,16 +1,16 @@
-{% extends 'forum/base.html' %}
+{% extends 'votacoes/base.html' %}
+
+{% load crispy_forms_tags %}
 
 {% block content %}
-<header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
-  <div class="mdl-layout__header-row">
-  <span class="mdl-layout-title">Novo Post</span>
-  <div class="mdl-layout-spacer"></div>
-  <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+  
+  <h1>Nova postagem</h1>
+  
   </header>
-  <div class="mdl-grid">
+  <div >
   	<form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
+        {% crispy form %}
+        <button type="submit" class="save btn btn-info">Salvar</button>
     </form>
   </div>
     
