--- a/votacoes/templates/votacoes/base.html
+++ b/votacoes/templates/votacoes/base.html
@@ -1,52 +1,70 @@
 {% load static %}
 <html>
-    <head>
-        <title>Campeonato Brasileiro</title>
-        <link rel="icon" href="{% static 'imagens/bolaIcone.ico'%}" >
-        <link rel="stylesheet" href="{% static 'css/votacoes.css' %}">
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-        <meta name="mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
-        <style>
+      <head>
 
-        .demo-list-item {
-          width: 300px;
-        }
-        #view-source {
-          position: fixed;
-          display: block;
-          right: 0;
-          bottom: 0;
-          margin-right: 40px;
-          margin-bottom: 40px;
-          z-index: 900;
-        }
-        </style>
-    </head>
+        <title>Campeonato Brasileiro</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      </head>
       <body>
-        <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
-          
-          <div class="demo-drawer mdl-layout__drawer mdl-color--green-900 mdl-color-text--white">
-            <header class="demo-drawer-header">
-              <h3 class="titulo">Campeonato Brasileiro</h3>
-            </header>
-            <nav class="demo-navigation mdl-navigation mdl-color--green-800" >
-              <a class="mdl-navigation__link mdl-color-text--white" href="/">Tabela</a>
-              <a class="mdl-navigation__link mdl-color-text--white" href="{% url 'jogos' %}">Jogos</a>
+        <nav class="navbar navbar-expand-sm bg-primary navbar-dark fixed-top">
+          <a class="navbar-brand" href="/">Campeonato Brasileiro</a>
+
+          <!-- Toggler/collapsibe Button -->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Tabela</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'jogos' %}">Jogos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'topicos' %}">Forum</a>
+
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'contato' %}">Contato</a>
+              </li>
+            {% if user.is_authenticated %}
+              <span class="navbar-text">
+                Hi {{ user.username }}!
+              </span>
+              <li class="nav-item">
+
+                <a class="nav-link" href="{% url 'logout' %}" >logout</a>
+              </li>
+            {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'password_reset' %}">reset password</a>
+              </li>
               
-              <a class="mdl-navigation__link mdl-color-text--white" href="{% url 'topicos' %}">Fórum</a>
-            </nav>
-          </div>
-          <main class="mdl-layout__content mdl-color--grey-100">
-                {% block content %}
-                {% endblock %}
-          </main>
+            {% endif %}
+          </ul>
         </div>
-        <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+        </nav>
+        <div class="container-fluid " style="margin-top:80px">
+          <div class="row justify-content-center">
+            <div class="col-8"> 
+              <hr class="mt-0 mb-4">
+                  {% block content %}
+                  {% endblock %}
+            </div>
+          </div>
+        </div>
       </body>
 </html>
+
+
+
