--- a/votacoes/templates/votacoes/lista_jogos.html
+++ b/votacoes/templates/votacoes/lista_jogos.html
@@ -4,12 +4,18 @@
 	<header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
 	<div class="mdl-layout__header-row">
 	<span class="mdl-layout-title">Jogos</span>
+    <a class="nav-link" href="{% url 'new_jogo' %}">novo jogo</a>
+    <a class="nav-link" href="{% url 'new_time' %}">novo time</a>
+
 	<div class="mdl-layout-spacer"></div>
 	<div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
     </header>
 
+
+
     {% for escolha in escolhas %}
     <div class="centro">
+
         <div class="mld-grid">
         <div class="mdl-cell--middle mdl-cell mdl-shadow--2dp">
             <ul class="demo-list-item mdl-list">
