--- a/forum/templates/forum/new_post.html
+++ b/forum/templates/forum/new_post.html
@@ -9,8 +9,8 @@
   </header>
   <div >
   	<form method="POST" class="post-form">{% csrf_token %}
-        {% crispy form %}
-        <button type="submit" class="save btn btn-info">Salvar</button>
+        {{form|crispy}}
+        <button type="submit" class="save btn btn-info">Save</button>
     </form>
   </div>
     
