--- a/votacoes/templates/votacoes/base.html
+++ b/votacoes/templates/votacoes/base.html
@@ -35,19 +35,21 @@
                 <a class="nav-link" href="{% url 'contato' %}">Contato</a>
               </li>
             {% if user.is_authenticated %}
-              <span class="navbar-text">
-                Hi {{ user.username }}!
-              </span>
+              
               <li class="nav-item">
 
-                <a class="nav-link" href="{% url 'logout' %}" >logout</a>
+                <a class="nav-link" href="{% url 'logout' %}" >Logout</a>
               </li>
             {% else %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">login</a>
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'password_reset' %}">reset password</a>
+                <a class="nav-link" href="{% url 'password_reset' %}">Reset password</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'signup' %}"> Inscreva-se
+                </a>
               </li>
               
             {% endif %}
@@ -56,7 +58,7 @@
         </nav>
         <div class="container-fluid " style="margin-top:80px">
           <div class="row justify-content-center">
-            <div class="col-8"> 
+            <div class="col-10"> 
               <hr class="mt-0 mb-4">
                   {% block content %}
                   {% endblock %}
