--- a/votacoes/templates/votacoes/lista_jogos.html
+++ b/votacoes/templates/votacoes/lista_jogos.html
@@ -1,43 +1,34 @@
 {% extends 'votacoes/base.html' %}
 
 {% block content %}
-	<header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
-	<div class="mdl-layout__header-row">
-	<span class="mdl-layout-title">Jogos</span>
-    <a class="nav-link" href="{% url 'new_jogo' %}">novo jogo</a>
-    <a class="nav-link" href="{% url 'new_time' %}">novo time</a>
-
-	<div class="mdl-layout-spacer"></div>
-	<div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-    </header>
-
-
-
-    {% for escolha in escolhas %}
-    <div class="centro">
-
-        <div class="mld-grid">
-        <div class="mdl-cell--middle mdl-cell mdl-shadow--2dp">
-            <ul class="demo-list-item mdl-list">
-            <li class="mdl-list__item">
-                <span class="mdl-list__item-primary-content">
-                    <p><a href="{% url 'jogo' pk=escolha.pk %}">{{ escolha.Partida}}</a></p>
-                    
-                </span>            
-            </li>
-            <li class="mdl-list__item">
-                <span class="mdl-list__item-primary-content">
-                <p>{{ escolha.Equipe_da_casa}} X {{ escolha.Equipe_de_fora}}</p>
-                </span>
-            </li>
-        </ul>
-        </div>
-    </div>
-    </div>
+	
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link disabled" href="/">Jogos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'new_jogo' %}">novo jogo</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'new_time' %}">novo time</a>
+        </li>
+    </ul>
+    
     
 
-               
-        
+    {% for escolha in escolhas %}
+    
+        <ul class="list-group">
+            <li class="list-group-item active ">
+            <a class="card-link text-white" href="{% url 'jogo' pk=escolha.pk %}">{{ escolha.Partida}}</a>
+            </li>
+            <li class="list-group-item">
+            {{ escolha.Equipe_da_casa}} X {{ escolha.Equipe_de_fora}}
+            </li>
+        </ul>
+        <br>
+           
+    
     {% endfor %}
 
 {% endblock %}
