--- a/votacoes/templates/votacoes/new_time.html
+++ b/votacoes/templates/votacoes/new_time.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <h1>Novo Time</h1>
-  <div class="mdl-grid">
+  <div>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="save btn btn-info">Save</button>
