--- a/forum/templates/forum/contato.html
+++ b/forum/templates/forum/contato.html
@@ -4,6 +4,9 @@
 
 {% block conteudo %}
 	<div >
+		ola
+		<h1>ola
+		</h1>
     <form method="POST" class="post-form">
     	{% csrf_token %}
         {{form|crispy}}
