--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -6,7 +6,7 @@
 		<p>Por favor, informe sua nova senha duas vezes para que possamos verificar se você a digitou corretamente.</p>
 		<form method="post">
 			{% csrf_token %}
-			{{ formZcrispy }}
+			{{ form|crispy }}
 			<button type="submit" class="btn btn-success shadow my-4">Redefinir</button>
 		</form>
 {% endblock %}
