--- a/votacoes/templates/votacoes/base.html
+++ b/votacoes/templates/votacoes/base.html
@@ -38,14 +38,14 @@
               
               <li class="nav-item">
 
-                <a class="nav-link" href="{% url 'logout' %}" >Logout</a>
+                <a class="nav-link" href="{% url 'logout' %}" >Sair</a>
               </li>
             {% else %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Login</a>
+                <a class="nav-link" href="{% url 'login' %}">Entrar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'password_reset' %}">Reset password</a>
+                <a class="nav-link" href="{% url 'password_reset' %}">Esqueci minha senha</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'signup' %}"> Inscreva-se
