--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,11 @@
 
 {% block content %}
     <h1>Tabela</h1>
-	<div >
-	<table class="table">
+	<div class="table-responsive-sm">
+	<table class="table table-hover">
 		<tr>
-			<th colspan="2">Clube</th>
+			<thead class="thead-dark">
+			<th colspan="2" >Clube</th>
 			<th>Pts</th>
 			<th>PJ</th>
 			<th>VIT</th>
@@ -14,11 +15,12 @@
 			<th>GP</th>
 			<th>GC</th>
 			<th>SG</th>
+			</thead>
 		</tr>
 		<tr>
 			<td>1</td>
 			<td>Atlético-PR</td>
-			<td>0</td>
+			<td>0	</td>
 			<td>0</td>
 			<td>0</td>
 			<td>0</td>
